# simpleGame

./: .gitignore  Armor.cpp  Boss.cpp  CMakeLists.txt  Character.cpp  Enemy.cpp  Event.cpp  Functions.cpp  Game.cpp  Gfunctions.cpp  Inventory.cpp  Item.cpp  Puzzle.cpp  Weapon.cpp  main.cpp
Header-files/: Armor.h  Boss.h  Character.h  Enemy.h  Event.h  Functions.h  Game.h  Gfunctions.h  Inventory.h  Item.h  Puzzle.h  STLINCLUDE.h  Weapon.h  dArr.h
Puzzles/: 1.txt  2.txt  TEMPLATE.txt
